--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -43,7 +43,8 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "typeinfo": "cpp",
-        "cstring": "cpp"
+        "cstring": "cpp",
+        "map": "cpp"
     },
     "editor.renderWhitespace": "selection"
 }
